# rs-comprehensive

./: Cargo.toml
day_1_afternoon/src/: main.rs
day_1_afternoon_elevator_events/: Cargo.toml
day_1_afternoon_elevator_events/src/: main.rs
day_1_afternoon_geometry/: Cargo.toml
day_1_afternoon_geometry/src/: main.rs
day_1_afternoon_transpose/: Cargo.toml
day_1_afternoon_usertypes/: Cargo.toml
day_1_morning/: Cargo.toml
day_1_morning_collatz/: Cargo.toml
day_2_afternoon/: Cargo.toml
day_2_afternoon_counter/: Cargo.toml
day_2_afternoon_rot13/: Cargo.toml
day_2_afternoon_std_traits/: Cargo.toml
day_2_morning/: Cargo.toml
day_2_morning_expression_evaluator/: Cargo.toml
day_2_morning_generic_functions/: Cargo.toml
day_2_morning_generic_logger/: Cargo.toml
day_2_morning_generic_min/: Cargo.toml
day_2_morning_methods_traits/: Cargo.toml
day_3_afternoon/: Cargo.toml
day_3_afternoon_health_stats/: Cargo.toml
day_3_afternoon_protobuf_parsing/: Cargo.toml
day_3_morning/: Cargo.toml
day_3_morning_binary_tree/: Cargo.toml
day_3_morning_builder/: Cargo.toml
day_3_morning_smart_pointers/: Cargo.toml
day_4_affternoon/: Cargo.toml
day_4_affternoon_rewriting_with_result/: Cargo.toml
day_4_morning/: Cargo.toml
day_4_morning_chaining/: Cargo.toml
day_4_morning_luhn_algorithm/: Cargo.toml
day_4_morning_tests/: Cargo.toml
day_4_morning_widget_modules/: Cargo.toml
day_x_concurrency_afternoon_tokio/: Cargo.toml
day_x_concurrency_morning/: Cargo.toml
day_x_concurrency_morning_dining_philosophers/: Cargo.toml
(+32 files in other folders)
