[workspace]

members = [
    "day_1_afternoon",
    "day_1_afternoon_elevator_events",
    "day_1_afternoon_geometry",
    "day_1_afternoon_transpose",
    "day_1_afternoon_usertypes",
    "day_1_morning",
    "day_1_morning_collatz",
    "day_2_morning",
    "day_2_morning_expression_evaluator", "day_2_morning_generic_logger",
    "day_2_morning_methods_traits",
]
