[workspace]

members = [
    "day_1_afternoon",
    "day_1_afternoon_elevator_events",
    "day_1_afternoon_geometry",
    "day_1_afternoon_transpose",
    "day_1_afternoon_usertypes",
    "day_1_morning",
    "day_1_morning_collatz", "day_2_afternoon", "day_2_afternoon_counter", "day_2_afternoon_rot13", "day_2_afternoon_std_traits",
    "day_2_morning",
    "day_2_morning_expression_evaluator", "day_2_morning_generic_functions", "day_2_morning_generic_logger", "day_2_morning_generic_min",
    "day_2_morning_methods_traits", "day_3_morning", "day_3_morning_binary_tree", "day_3_morning_builder", "day_3_morning_smart_pointers",
]
